--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <title>Video Chat</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon"
+    href="https://img-premium.flaticon.com/png/512/2839/premium/2839026.png?token=exp=1631889167~hmac=d66d12b310faaa42b67041c0968249e6" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <title>Video Chat</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
